--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,27 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+.filtre{
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	margin-bottom: 30px;
+}
+.filtre h2{
+	display: flex;
+	border-radius : 60px;
+	border : 1px solid #1D6154;
+	color: #1D6154;
+	justify-content: center;
+	padding: 9px 25px 9px 25px;
+	font-family: 'Syne';
+	align-content: center;
+	font-size: 16px;
+}
+.filtre h2:hover{
+	background-color: #1D6154;
+	color: white;
+}
 .gallery {
 	width: 100%;
 	display: grid;
